<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffd6d4d0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="#ffeeeeee" android:paddingTop="30.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@android:id/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:src="@drawable/appicon_fm" android:layout_toLeftOf="@android:id/title" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#ff000000" android:id="@android:id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/appname" android:layout_alignTop="@android:id/icon" android:layout_centerHorizontal="true" />
        <TextView android:textSize="14.0dip" android:textColor="#ff4d4d4d" android:id="@id/text_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@android:id/title" android:layout_alignLeft="@android:id/title" />
        <TextView android:textSize="14.0dip" android:textColor="#ff4d4d4d" android:id="@id/copyright" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/copyright" android:layout_toRightOf="@id/text_version" android:layout_below="@android:id/title" />
        <Button android:gravity="center" android:id="@id/button_rate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="30.0dip" android:text="@string/rate" android:layout_below="@id/copyright" style="@style/font16_black_style" />
    </RelativeLayout>
    <TextView android:textSize="16.0dip" android:textColor="#ff4d4d4d" android:id="@id/other_apps" android:paddingLeft="10.0dip" android:paddingTop="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/other_apps" />
    <GridView android:id="@id/widget_gridview" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:verticalSpacing="20.0dip" android:numColumns="4" />
</LinearLayout>
