<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/white" android:id="@id/text_user" android:background="@color/title_gray" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/user_anonymous_title" android:layout_alignParentTop="true" />
    <RelativeLayout android:id="@id/container_personalChannel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/text_user">
        <CheckedTextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/check_personalChannel" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="?android:listPreferredItemHeight" android:checkMark="?android:listChoiceIndicatorSingle" android:text="@string/my_personal_channel_title" />
        <ImageView android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:scaleType="fitXY" android:layout_below="@id/check_personalChannel" />
        <RelativeLayout android:id="@id/container_redChannel" android:layout_width="fill_parent" android:layout_height="?android:listPreferredItemHeight" android:layout_below="@id/check_personalChannel">
            <CheckedTextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/check_redChannel" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="?android:listPreferredItemHeight" android:checkMark="?android:listChoiceIndicatorSingle" android:text="@string/personal_offline_red_channel" />
            <ProgressBar android:id="@id/progress_sync" android:paddingRight="80.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:max="10000" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="?android:attr/progressBarStyleSmallTitle" />
            <TextView android:textAppearance="?android:textAppearance" android:textColor="#ff939393" android:gravity="center_vertical" android:id="@id/text_sync" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="?android:listPreferredItemHeight" android:text="@string/heart_syncing" android:layout_toLeftOf="@id/progress_sync" android:layout_centerVertical="true" />
        </RelativeLayout>
    </RelativeLayout>
    <TextView android:textColor="@color/white" android:id="@id/text_publicChannelTitle" android:background="@color/title_gray" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/public_channel_title" android:layout_below="@id/container_personalChannel" android:layout_centerHorizontal="true" />
    <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/text_publicChannelTitle" />
</RelativeLayout>
