<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/container_header" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
            <TextView android:id="@id/text_loginTitle" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_name" style="@style/font16_white_style" />
            <RelativeLayout android:id="@id/container_name" android:background="@drawable/shape_editbox_unfocused" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/button_clearname" android:padding="2.0dip" android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/clear" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                <AutoCompleteTextView android:id="@id/text_name" android:background="@android:color/white" android:padding="2.0dip" android:nextFocusDown="@id/passwordText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/username" android:layout_toLeftOf="@id/button_clearname" android:layout_centerVertical="true" android:inputType="textEmailAddress" android:textCursorDrawable="@null" style="@style/font18_black_style" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/container_pwd" android:background="@drawable/shape_editbox_unfocused" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <ImageView android:id="@id/button_clearpwd" android:padding="2.0dip" android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/clear" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                <EditText android:id="@id/text_password" android:background="@android:color/white" android:padding="2.0dip" android:nextFocusDown="@id/button_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password" android:layout_toLeftOf="@id/button_clearpwd" android:layout_centerVertical="true" android:inputType="textPassword" android:textCursorDrawable="@null" style="@style/font18_black_style" />
            </RelativeLayout>
            <Button android:id="@id/button_login" android:nextFocusDown="@id/text_register" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/button_login" />
            <TextView android:gravity="center" android:id="@id/text_register" android:background="@drawable/textview_selector" android:padding="5.0dip" android:focusable="true" android:nextFocusDown="@id/button_sina" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register_button" style="@style/font14_white_style" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/button_sina" android:background="@drawable/frame_bg" android:padding="10.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:layout_marginBottom="20.0dip" android:layout_below="@id/container_header" android:layout_centerHorizontal="true">
            <ImageView android:padding="5.0dip" android:layout_width="28.0dip" android:layout_height="28.0dip" android:src="@drawable/sina" android:scaleType="fitXY" />
            <TextView android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sina_login" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
